2009-01-17 Maximilien Cuony
    * Autosave should be disabled again
    * Sending mail by smtp done !
    
2009-01-15 Maximilien Cuony
    * Inline sign/crypt done
    * Fix bug with previous/next button

2009-01-15 Maximilien Cuony
    * Trying to fix FS#176 {fixed}
    * FS#177 - Improve gmail interface
    * fix problem with binary files attached in gmail

2009-01-14 Maximilien Cuony
    * Better html check
    * Decrypt mime content
    * Better signs checks
    * Fixed a problem with sign mail encrypted text (too information about user)
    * Big mails

2009-01-10 Maximilien Cuony
    * Base of using openpgp/mine mails
    * Instantaneous check for cGmail2
    * Finished checking sign in openpgp/mime and inline (problem with enigmail/iso wating on enigmail devs)
    * New decryption system working !

2009-01-07 Maximilien Cuony
    * Adding {$FXFolder} keyword for gnupg path and gnupg commands (for Fx portable)
    * FS#169
    * FS#154
    * FS#176
    * FS#7 (toolbar button removed)

2009-01-06 Maximilien Cuony
    * Translate.getfiregpg.org working
    * Adding missing Swedish locate
    * Install page XHTML strict

2009-01-05 Maximilien Cuony
    * Fixed the keylist of search

2008-12-25 Maximilien Cuony
    * 0.6.4 packed, and uploaded to the server !

2008-12-23 Maximilien Cuony
    * Manage signs
    * FS#4 !

2008-12-22 Maximilien Cuony
    * Keys list are sorted
    * Revoke keys
    * Manage users ids

2008-12-21 Maximilien Cuony
    * Delete and gen keys
    * Fx 3.1 support
    * FS#72
    * FS#114

2008-12-20 Maximilien Cuony
    * Trust system finished
    * Password change feature

2008-11-02 Maximilien Cuony
    * 0.6.3 packed, and uploaded to the server !
    * Key manager (not finished but ready for a release)
    * Translation of some elements

2008-10-30 Maximilien Cuony
	* FS#60
	* Continue key manager, key import

2008-10-29 Maximilien Cuony
	* Fix size problems for windows in options (50% of FS#143)
	* FS#144
	* FS#145
	* FS#149