@@ -28,3 +28,7 @@ Website translations :
 Patchs by :
     Ilya Chernikov (Mac OS Bug)
     Hometoast (Windows Bug)
+
+Use code form Gmail S/MIME
+        Copyright (C) 2005-2007 Richard Jones.
+        Copyright (C) 2007-2008 Sean Leonard of SeanTek(R).
